syntax = "proto3";

package com.mmo4j.infrastructure.proto;

option csharp_namespace = "MMO4J.Infrastructure.Proto.Realm";
option java_package = "com.mmo4j.infrastructure.proto.realm";

import "account_types.proto";

message RealmProto {
    enum RealmFlags {
        RF_NONE = 0;
        RF_INVALID = 1;
        RF_OFFLINE = 2;
        RF_SPECIFY_BUILD = 3; // client will show realm version in RealmList screen in form "RealmName (major.minor.revision.build)"
        RF_UNKNOWN1 = 4;
        RF_UNKNOWN2 = 5;
        RF_NEW_PLAYERS = 6;
        RF_RECOMMENDED = 7;
        RF_FULL = 8;
    }

    message BuildInfo {
        int32 buildVersion = 1;
        int32 majorVersion = 2;
        int32 minorVersion = 3;
        int32 bugfixVersion = 4;
        int32 hotfixVersion = 5;
    }

    message Realm {
        string address = 1;
        int32 icon = 2;
        repeated RealmFlags flags = 3;
        int32 timezone = 4;
        int32 id = 5;
        repeated AccountTypesProto.AccountTypes allowedSecurityLevel = 6; // current allowed join security level (show as locked for not fit accounts)
        float populationLevel = 7;
        repeated int32 realmBuilds = 8; // list of supported builds (updated in DB by mangosd)
        BuildInfo buildInfo = 9; // build info for show version in list
    }
}
